--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 100px;
-    background-image: linear-gradient(135deg, #F6B8B8, #1A8FF5);
+    background-image: linear-gradient(135deg, #a056a0, #e2d739);
     height: 100%;
     margin: 0;
     background-repeat: no-repeat;
@@ -16,7 +16,6 @@ body {
 }
 
 .card {
-    background-color: blue;
     width: 350px;
     color: white;
     text-align: center;
@@ -27,7 +26,7 @@ body {
 }
 
 .top {
-    background-image: linear-gradient(45deg, #F1A49B, #F54C4A);
+    background-image: linear-gradient(45deg, #794cad, #2e2929);
     padding-bottom: 100px;
 }
 
@@ -68,10 +67,10 @@ body {
 }
 
 #second-unit {
-    border: #F54C4A;
+    border:  #2e2929;
     background: none;
-    border-bottom: 1px solid white;
-    color: #F54C4A;
+    border-bottom: 1px solid #2e2929;
+    color:  #2e2929;
     font-size: 40px;
     width: 160px;
 }
@@ -85,7 +84,7 @@ body {
 .second-unit-options {
     border: none;
     background: none;
-    color: #F54C4A;
+    color:  #2e2929;
 }
 
 .main-unit-options option {
